# netgen_rs

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: rust.yml
lemon_scripts/: README.md
netgen_original/: README.BAK
src/: index_list.rs  lib.rs  main.rs  netgen.rs  random.rs
tests/: integration.rs  lemon_suite.rs
tests/common/: mod.rs
