[package]
name = "netgen_rs"
version = "0.1.0"
edition = "2024"
description = "Rust rewrite of NETGEN, a min-cost flow, assignment, and maximum flow problem graph generator"
license = "MIT"
repository = "https://github.com/vini-fda/netgen_rs"
keywords = ["network-flow", "min-cost-flow", "dimacs", "graph-generator"]
categories = ["network", "graphs"]
readme = "README.md"

[dependencies]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
